# aws-costlens

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  config.example.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
aws_costlens/: __init__.py  app_controller.py  aws_api.py  cli_commands.py  common_utils.py  console_setup.py  cost_controller.py  main.py  models.py  pdf_renderer.py  profiles_controller.py  report_exporter.py  visuals.py
